[lib]
name = "log_auto_script_lib"
path = "src/lib.rs"

[package]
authors = ["AnselYuki"]
name = "log_auto_script"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.37"

# serde 序列化
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.8.26"

# 文件处理
open = "2.1.3"
platform-dirs = "0.3.0"

# RPC 通信
reqwest = { version = "0.11.27", features = ["json","blocking"] }

# Console 输出依赖
colored = "1.9.4"
indicatif = "0.17.8"
clap = { version = "4.5.4", features = ["derive"] }
prettytable = "0.10.0"

git2 = "0.18.3"
# 日志与错误处理
log = "0.4.21"
exitcode = "1.1.2"
lazy_static = "1.4.0"